// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkSelectableChip should render correctly 1`] = `
<DocumentFragment>
  <button
    aria-checked="false"
    class="bpk-chip bpk-chip--primary"
    role="checkbox"
    title="Toggle"
    type="button"
  >
    <span
      class="bpk-text bpk-text--sm"
    >
      Toggle me
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkSelectableChip should render correctly with a "className" attribute 1`] = `
<DocumentFragment>
  <button
    aria-checked="false"
    class="bpk-chip bpk-chip--primary custom-class"
    role="checkbox"
    title="Toggle"
    type="button"
  >
    <span
      class="bpk-text bpk-text--sm"
    >
      Toggle me
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkSelectableChip should render correctly with type="light" 1`] = `
<DocumentFragment>
  <button
    aria-checked="false"
    class="bpk-chip bpk-chip--light"
    role="checkbox"
    title="Toggle"
    type="button"
  >
    <span
      class="bpk-text bpk-text--sm"
    >
      Toggle me
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkSelectableChip should render correctly with type="light" and a leading accessory view 1`] = `
<DocumentFragment>
  <button
    aria-checked="false"
    class="bpk-chip bpk-chip--light"
    role="checkbox"
    title="Toggle"
    type="button"
  >
    <span
      class="bpk-chip__leading-accessory-view"
    >
      <span>
        Leading
      </span>
    </span>
    <span
      class="bpk-text bpk-text--sm"
    >
      Toggle me
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkSelectableChip should render correctly with type="light" and a trailing accessory view 1`] = `
<DocumentFragment>
  <button
    aria-checked="false"
    class="bpk-chip bpk-chip--light"
    role="checkbox"
    title="Toggle"
    type="button"
  >
    <span
      class="bpk-text bpk-text--sm"
    >
      Toggle me
    </span>
    <span
      class="bpk-chip__trailing-accessory-view"
    >
      <span>
        Trailing
      </span>
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkSelectableChip should render correctly with type="light" and both a leading and trailing accessory view 1`] = `
<DocumentFragment>
  <button
    aria-checked="false"
    class="bpk-chip bpk-chip--light"
    role="checkbox"
    title="Toggle"
    type="button"
  >
    <span
      class="bpk-chip__leading-accessory-view"
    >
      <span>
        Leading
      </span>
    </span>
    <span
      class="bpk-text bpk-text--sm"
    >
      Toggle me
    </span>
    <span
      class="bpk-chip__trailing-accessory-view"
    >
      <span>
        Trailing
      </span>
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkSelectableChip should render correctly with type="light" and disabled 1`] = `
<DocumentFragment>
  <button
    aria-checked="false"
    class="bpk-chip bpk-chip--light bpk-chip--disabled"
    disabled=""
    role="checkbox"
    title="Toggle"
    type="button"
  >
    <span
      class="bpk-text bpk-text--sm"
    >
      Toggle me
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkSelectableChip should render correctly with type="light" and selected 1`] = `
<DocumentFragment>
  <button
    aria-checked="true"
    class="bpk-chip bpk-chip--light bpk-chip--light-selected"
    role="checkbox"
    title="Toggle"
    type="button"
  >
    <span
      class="bpk-text bpk-text--sm"
    >
      Toggle me
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkSelectableChip should render correctly with type="light", selected and disabled 1`] = `
<DocumentFragment>
  <button
    aria-checked="true"
    class="bpk-chip bpk-chip--light bpk-chip--disabled"
    disabled=""
    role="checkbox"
    title="Toggle"
    type="button"
  >
    <span
      class="bpk-text bpk-text--sm"
    >
      Toggle me
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkSelectableChip should render correctly with type="primary" 1`] = `
<DocumentFragment>
  <button
    aria-checked="false"
    class="bpk-chip bpk-chip--primary"
    role="checkbox"
    title="Toggle"
    type="button"
  >
    <span
      class="bpk-text bpk-text--sm"
    >
      Toggle me
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkSelectableChip should render correctly with type="primary" and a leading accessory view 1`] = `
<DocumentFragment>
  <button
    aria-checked="false"
    class="bpk-chip bpk-chip--primary"
    role="checkbox"
    title="Toggle"
    type="button"
  >
    <span
      class="bpk-chip__leading-accessory-view"
    >
      <span>
        Leading
      </span>
    </span>
    <span
      class="bpk-text bpk-text--sm"
    >
      Toggle me
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkSelectableChip should render correctly with type="primary" and a trailing accessory view 1`] = `
<DocumentFragment>
  <button
    aria-checked="false"
    class="bpk-chip bpk-chip--primary"
    role="checkbox"
    title="Toggle"
    type="button"
  >
    <span
      class="bpk-text bpk-text--sm"
    >
      Toggle me
    </span>
    <span
      class="bpk-chip__trailing-accessory-view"
    >
      <span>
        Trailing
      </span>
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkSelectableChip should render correctly with type="primary" and both a leading and trailing accessory view 1`] = `
<DocumentFragment>
  <button
    aria-checked="false"
    class="bpk-chip bpk-chip--primary"
    role="checkbox"
    title="Toggle"
    type="button"
  >
    <span
      class="bpk-chip__leading-accessory-view"
    >
      <span>
        Leading
      </span>
    </span>
    <span
      class="bpk-text bpk-text--sm"
    >
      Toggle me
    </span>
    <span
      class="bpk-chip__trailing-accessory-view"
    >
      <span>
        Trailing
      </span>
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkSelectableChip should render correctly with type="primary" and disabled 1`] = `
<DocumentFragment>
  <button
    aria-checked="false"
    class="bpk-chip bpk-chip--primary bpk-chip--disabled"
    disabled=""
    role="checkbox"
    title="Toggle"
    type="button"
  >
    <span
      class="bpk-text bpk-text--sm"
    >
      Toggle me
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkSelectableChip should render correctly with type="primary" and selected 1`] = `
<DocumentFragment>
  <button
    aria-checked="true"
    class="bpk-chip bpk-chip--primary bpk-chip--primary-selected"
    role="checkbox"
    title="Toggle"
    type="button"
  >
    <span
      class="bpk-text bpk-text--sm"
    >
      Toggle me
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkSelectableChip should render correctly with type="primary", selected and disabled 1`] = `
<DocumentFragment>
  <button
    aria-checked="true"
    class="bpk-chip bpk-chip--primary bpk-chip--disabled"
    disabled=""
    role="checkbox"
    title="Toggle"
    type="button"
  >
    <span
      class="bpk-text bpk-text--sm"
    >
      Toggle me
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkSelectableChip should render correctly with type="success" 1`] = `
<DocumentFragment>
  <button
    aria-checked="false"
    class="bpk-chip bpk-chip--success"
    role="checkbox"
    title="Toggle"
    type="button"
  >
    <span
      class="bpk-text bpk-text--sm"
    >
      Toggle me
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkSelectableChip should render correctly with type="success" and a leading accessory view 1`] = `
<DocumentFragment>
  <button
    aria-checked="false"
    class="bpk-chip bpk-chip--success"
    role="checkbox"
    title="Toggle"
    type="button"
  >
    <span
      class="bpk-chip__leading-accessory-view"
    >
      <span>
        Leading
      </span>
    </span>
    <span
      class="bpk-text bpk-text--sm"
    >
      Toggle me
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkSelectableChip should render correctly with type="success" and a trailing accessory view 1`] = `
<DocumentFragment>
  <button
    aria-checked="false"
    class="bpk-chip bpk-chip--success"
    role="checkbox"
    title="Toggle"
    type="button"
  >
    <span
      class="bpk-text bpk-text--sm"
    >
      Toggle me
    </span>
    <span
      class="bpk-chip__trailing-accessory-view"
    >
      <span>
        Trailing
      </span>
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkSelectableChip should render correctly with type="success" and both a leading and trailing accessory view 1`] = `
<DocumentFragment>
  <button
    aria-checked="false"
    class="bpk-chip bpk-chip--success"
    role="checkbox"
    title="Toggle"
    type="button"
  >
    <span
      class="bpk-chip__leading-accessory-view"
    >
      <span>
        Leading
      </span>
    </span>
    <span
      class="bpk-text bpk-text--sm"
    >
      Toggle me
    </span>
    <span
      class="bpk-chip__trailing-accessory-view"
    >
      <span>
        Trailing
      </span>
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkSelectableChip should render correctly with type="success" and disabled 1`] = `
<DocumentFragment>
  <button
    aria-checked="false"
    class="bpk-chip bpk-chip--success bpk-chip--disabled"
    disabled=""
    role="checkbox"
    title="Toggle"
    type="button"
  >
    <span
      class="bpk-text bpk-text--sm"
    >
      Toggle me
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkSelectableChip should render correctly with type="success" and selected 1`] = `
<DocumentFragment>
  <button
    aria-checked="true"
    class="bpk-chip bpk-chip--success bpk-chip--success-selected"
    role="checkbox"
    title="Toggle"
    type="button"
  >
    <span
      class="bpk-text bpk-text--sm"
    >
      Toggle me
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkSelectableChip should render correctly with type="success", selected and disabled 1`] = `
<DocumentFragment>
  <button
    aria-checked="true"
    class="bpk-chip bpk-chip--success bpk-chip--disabled"
    disabled=""
    role="checkbox"
    title="Toggle"
    type="button"
  >
    <span
      class="bpk-text bpk-text--sm"
    >
      Toggle me
    </span>
  </button>
</DocumentFragment>
`;
